--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "~4.2.4",
     "@testing-library/react": "~9.3.2",
-    "@testing-library/user-event": "~7.1.2"
+    "@testing-library/user-event": "~7.1.2",
+    "docker-compose": "^0.23.5"
   },
   "scripts": {
     "start": "react-scripts start",
