--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "~0.20.0",
     "formik": "^2.2.0",
+    "jwt-auth-react": "^4.1.2",
+    "jwt-decode": "^3.0.0",
     "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-datepicker": "^3.2.2",
