--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "react-validation": "^3.0.7",
     "validator": "^13.1.17",
     "yup": "^0.29.3"
