--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "~0.20.0",
+    "file-saver": "^2.0.2",
     "formik": "^2.2.0",
     "jwt-auth-react": "^4.1.2",
     "jwt-decode": "^3.0.0",
