--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "~0.20.0",
     "formik": "^2.2.0",
+    "go-npm": "^0.1.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
@@ -18,8 +19,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "~4.2.4",
     "@testing-library/react": "~9.3.2",
-    "@testing-library/user-event": "~7.1.2",
-    "docker-compose": "^0.23.5"
+    "@testing-library/user-event": "~7.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
