--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
