--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "~0.20.0",
-    "file-saver": "^2.0.2",
     "formik": "^2.2.0",
-    "jwt-auth-react": "^4.1.2",
     "jwt-decode": "^3.0.0",
+    "moment": "^2.29.1",
     "query-string": "^6.13.5",
     "react": "^16.13.1",
     "react-datepicker": "^3.2.2",
@@ -21,7 +20,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "~4.2.4",
     "@testing-library/react": "~9.3.2",
-    "@testing-library/user-event": "~7.1.2"
+    "@testing-library/user-event": "~7.1.2",
+    "@types/file-saver": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
