--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,32 +4,32 @@
   "private": true,
   "dependencies": {
     "axios": "^0.20.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.0",
-    "google-maps-react": "^2.0.2",
+    "google-maps-react": "^2.0.6",
     "history": "^5.0.0",
-    "jquery": "^3.4.0",
+    "jquery": "^3.5.1",
     "moment": "^2.29.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-bootstrap": "^1.0.0-beta.5",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.3.0",
-    "react-dom": "^16.8.4",
-    "react-full-screen": "^0.2.4",
+    "react-dom": "^16.13.1",
+    "react-full-screen": "^0.2.5",
     "react-loadable": "^5.5.0",
     "react-nvd3": "^0.5.7",
-    "react-perfect-scrollbar": "^1.4.4",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^6.0.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.0",
+    "react-scripts": "^3.4.3",
     "react-select": "^3.1.0",
     "react-toastify": "^6.0.9",
     "react-window-size": "^1.2.2",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "yup": "^0.29.3"
@@ -50,6 +50,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-to-print": "^2.1.1"
+    "react-to-print": "^2.10.0"
   }
 }
