--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.2.5",
     "react-loadable": "^5.5.0",
+    "react-notifications": "^1.7.2",
     "react-nvd3": "^0.5.7",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^6.0.1",
